Critical performance fix:

There is a huge difference of behaviour between DEBUG and RELEASE
builds of Qt 4.6, that breaks scrolling in KHTML.

Using QWidget::scroll() on a widget that doesn't have WA_OpaquePaintEvent
attribute set works just fine in Debug, but completely breaks down in
Release, causing the whole view to get repainted always.


CCMAIL: kde-packager@kde.org
BUG: 226265

svn path=/trunk/KDE/kdelibs/; revision=1089159